--- a/QuizApp/app/src/main/res/values/themes.xml
+++ b/QuizApp/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.QuizApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Hide the status bar of the app. -->
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="Theme.QuizApp" parent="Base.Theme.QuizApp" />
