--- a/DrawingApp/app/src/main/res/drawable/background_drawing_view_layout.xml
+++ b/DrawingApp/app/src/main/res/drawable/background_drawing_view_layout.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
+    >
+    <solid android:color="@color/white"/>
+    <stroke android:width="0.5dp"
+        android:color="#9AA2AF"/>
+</shape>
