--- a/DrawingApp/app/src/main/res/layout/activity_main.xml
+++ b/DrawingApp/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             android:background="@color/yellow"
             android:src="@drawable/pallet_normal"
             android:tag="@color/yellow"
+            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
 
         <ImageButton
@@ -44,6 +45,7 @@
             android:background="@color/black"
             android:src="@drawable/pallet_normal"
             android:tag="@color/black"
+            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
 
         <ImageButton
@@ -53,6 +55,7 @@
             android:background="@color/red"
             android:src="@drawable/pallet_normal"
             android:tag="@color/red"
+            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
 
         <ImageButton
@@ -62,6 +65,16 @@
             android:background="@color/green"
             android:src="@drawable/pallet_normal"
             android:tag="@color/green"
+            android:onClick="paintClicked"
+            tools:ignore="ContentDescription" />
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/white"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/white"
+            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
 
     </LinearLayout>
