--- a/DrawingApp/app/src/main/res/layout/activity_main.xml
+++ b/DrawingApp/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.drwaingapp.DrawingView
-        android:id="@+id/drawing_view"
+    <FrameLayout
+        android:id="@+id/fl_drawing_View_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="5dp"
         android:background="@drawable/background_drawing_view_layout"
-        app:layout_constraintBottom_toTopOf="@id/ll_paint_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/ll_paint_color"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:src="@drawable/ic_launcher_background"
+            android:id="@+id/iv_background_image"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <com.example.drwaingapp.DrawingView
+            android:id="@+id/drawing_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:background="#80FFFFFF" />
+
+    </FrameLayout>
+
+
 
     <LinearLayout
         android:id="@+id/ll_paint_color"
@@ -26,16 +43,16 @@
         app:layout_constraintBottom_toTopOf="@id/ib_brush"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/drawing_view">
+        app:layout_constraintTop_toBottomOf="@id/fl_drawing_View_container">
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/yellow"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/yellow"
-            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
 
         <ImageButton
@@ -43,9 +60,9 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/black"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/black"
-            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
 
         <ImageButton
@@ -53,9 +70,9 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/red"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/red"
-            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
 
         <ImageButton
@@ -63,18 +80,19 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/green"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/green"
-            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
+
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/white"
+            android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/white"
-            android:onClick="paintClicked"
             tools:ignore="ContentDescription" />
 
     </LinearLayout>
