--- a/Dialogs/app/src/main/res/layout/activity_main.xml
+++ b/Dialogs/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,17 @@
         android:layout_height="50dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/custom_dialog" />
+
+
+    <Button
+        android:id="@+id/custom_progress_dialog_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:text="@string/custom_progress_dialog" />
 
 
 </LinearLayout>
