--- a/DrawingApp/app/src/main/res/layout/activity_main.xml
+++ b/DrawingApp/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@id/ll_paint_color">
 
         <ImageButton
-            android:id="@+id/ib_background_image"
+            android:id="@+id/ib_galley"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
