image saving with coroutine

--- a/DrawingApp/app/src/main/res/layout/activity_main.xml
+++ b/DrawingApp/app/src/main/res/layout/activity_main.xml
@@ -132,12 +132,12 @@
             android:src="@drawable/ic_undo" />
 
         <ImageButton
-            android:id="@+id/ib_redo"
+            android:id="@+id/ib_save"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:scaleType="fitXY"
-            android:src="@drawable/baseline_1k_24" />
+            android:src="@drawable/ic_save" />
 
     </LinearLayout>
 
