--- a/Sevenminuitworkout/app/src/main/res/layout/activity_exercise.xml
+++ b/Sevenminuitworkout/app/src/main/res/layout/activity_exercise.xml
@@ -20,10 +20,11 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GET READY FOR"
+        android:text="@string/get_ready_for"
         android:textColor="@color/colorAccent"
         android:textSize="22sp"
         android:textStyle="bold"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/flProgressBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
