--- a/RecyclerViewinanutshell/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewinanutshell/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/userRecyclerView"
+        tools:listitem="@layout/user_item_xml"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
