design custom toolbar and activity

--- a/Happy Places/app/src/main/res/values/colors.xml
+++ b/Happy Places/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#4b86b4</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#2a4d69</color>
 
 </resources>
