--- a/Happy Places/app/src/main/res/values/themes.xml
+++ b/Happy Places/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.HappyPlaces" parent="Base.Theme.HappyPlaces" />
+    
+    <style name="CustomNoActionBarTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="CustomToolbarStyle">
+        <item name="android:textColorPrimary">@color/white</item>
+       <!-- <item name="android:colorControllNormal">@color/white</item>-->
+    </style>
 </resources>
